--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         </div>
         </div> <!--closes topbar-->
     </div> <!-- closes header-->
-
+    <div class="main-box"> <!--opens main box-->
     <div class="main clearfix"> <!--opens main-->
 
         <div class="main-content"> <!--opens main content-->
@@ -61,6 +61,7 @@
             </div>
         </div> <!-- closes connect -->
     </div> <!-- closes main-->
+    </div> <!-- closes main box-->
 
     <div class="footer">
         <p>Copyright 2017 Derek E. Brown</p>
