--- a/portfolio.html
+++ b/portfolio.html
@@ -28,16 +28,21 @@
         </div> <!--closes topbar-->
     </div> <!-- closes header-->
 
+    <div class="main-box"> <!--opens main box-->
     <div class="main clearfix"> <!--opens main-->
 
         <div class="main-content"> <!--opens main content-->
             <h2 class="content-title">Portfolio</h2>
 
                 <div class="content clearfix"> <!--opens content-portfolio-->
-                    <div class="image1"><h3>Image 1</h3></div>
-                    <div class="image2"><h3>Image 2</h3></div>
-                    <div class="image3"><h3>Image 3</h3></div>
-                    <div class="image4"><h3>Image 4</h3></div>
+                    <div class="image-container1 clearfix">
+                        <div class="image1"><h3>Image 1</h3></div>
+                        <div class="image2"><h3>Image 2</h3></div>
+                    </div>
+                    <div class="image-container2 clearfix">
+                        <div class="image3"><h3>Image 3</h3></div>
+                        <div class="image4"><h3>Image 4</h3></div>
+                    </div>
                     <div class="image5"><h3>Image 5</h3></div>
                 </div> <!--closes content-portfolio-->
         </div> <!--closes main-content-->
@@ -56,7 +61,7 @@
             </div>
         </div> <!-- closes connect -->
     </div> <!-- closes main-->
-
+    </div> <!--closes main-box-->
     <div class="footer">
         <p>Copyright 2017 Derek E. Brown</p>
     </div>
